Polishing the experience, styling with AWS orange, and making the message area llighter on the real DOM by using virtual DOM elements more

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   </div>
 </div>
 
+<script src="https://unpkg.com/vue@2.3.0/dist/vue.js"></script>
 <script src="https://tangbc.github.io/vue-virtual-scroll-list/index.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/main.js"></script>
