Some minor visual tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
 <link rel='stylesheet prefetch' href='/style.css'>
+<link rel="icon" href="/favicon.ico" />
+<title>Fargate Chat</title>
 </head><body>
 
 <div id="frame">
