Saving CSS for working locally more easily

--- a/services/client/public/index.html
+++ b/services/client/public/index.html
@@ -24,6 +24,7 @@
 
   <div id="frame">
     <div id='sidepanel'>
+      <search></search>
       <rooms></rooms>
     </div>
     <div id="content" class="content">
