Basic interface prototype of the search

--- a/services/client/public/index.html
+++ b/services/client/public/index.html
@@ -21,7 +21,6 @@
 </head>
 
 <body>
-
   <div id="frame">
     <div id='sidepanel'>
       <search></search>
@@ -32,8 +31,10 @@
       <messages></messages>
       <component :is="state.belowMessagesView"></component>
     </div>
+    <searcher></searcher>
   </div>
   <script src="/main.js"></script>
 </body>
+
 
 </html>
